--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
+<header>
+    <div class="horiseon">
+    <h1>Hori<span class="seo">seo</span>n</h1>
+    </div>
+    <div class="page-links">
+        <ul>
+            <li>
+                <a href="#search-engine-optimization">Search Engine Optimization</a>
+            </li>
+            <li>
+                <a href="#online-reputation-management">Online Reputation Management</a>
+            </li>
+            <li>
+                <a href="#social-media-marketing">Social Media Marketing</a>
+            </li>
+        </ul>
+    </div>
+</header>
+
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing!</a>
-                </li>
-            </ul>
-        </div>
     </div>
     <div class="hero"></div>
     <div class="content">
