--- a/index.html
+++ b/index.html
@@ -8,26 +8,25 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<header>
-    <div class="horiseon">
-    <h1>Hori<span class="seo">seo</span>n</h1>
-    </div>
-    <div class="page-links">
-        <ul>
-            <li>
-                <a href="#search-engine-optimization">Search Engine Optimization</a>
-            </li>
-            <li>
-                <a href="#online-reputation-management">Online Reputation Management</a>
-            </li>
-            <li>
-                <a href="#social-media-marketing">Social Media Marketing</a>
-            </li>
-        </ul>
-    </div>
-</header>
-
 <body>
+    <header>
+        <div class="horiseon">
+        <h1>Hori<span class="seo">seo</span>n</h1>
+        </div>
+        <div class="page-links">
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
+        </div>
+    </header>
     </div>
     <div class="hero"></div>
     <div class="content">
@@ -60,23 +59,18 @@
         </div>
     </div>
     <div class="benefits">
-        <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -85,12 +79,11 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
-
 </html>
