--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             </ul>
         </div>
     </header>
+    <div>
+        <img class="main-image" src="./assets/images/digital-marketing-meeting.jpg">
     </div>
-    <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
