--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <div>
-        <img class="main-image" src="./assets/images/digital-marketing-meeting.jpg" alt="business team working around a table">
+        <img class="top-image" src="./assets/images/digital-marketing-meeting.jpg" alt="business team working around a table">
     </div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
